reverting some VM options