@@ -210,7 +210,6 @@
                             <executable>java</executable>
                             <arguments>
                                 <argument>-Xmx2G</argument>
-                                <argument>-XX:MaxPermSize=1G</argument>
                                 <argument>-classpath</argument>
                                 <classpath />
                                 <argument>-Donebusaway_prefix=${basedir}</argument>
